# dynkinlab

./: Makefile  Pipfile  README.md  pyproject.toml
.devcontainer/: devcontainer.json
examples/: notebook.ipynb
src/dynkinlab/: __init__.py  matrices.py
tests/: test_matrices.py
